--- a/client/src/css/footer.css
+++ b/client/src/css/footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100vw;
   margin-top: 0;
-  background: hsla(248, 73%, 51%, 1);
+  background: black;
   height: 10vh;
   margin-bottom: 0;
   display: flex;
