--- a/client/src/css/header.css
+++ b/client/src/css/header.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 15vh;
+  height: 10.5vh;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -16,12 +16,11 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 15vh;
   display: flex;
   flex-direction: row;
   align-items: center;
   z-index: 10;
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(255, 250, 250, 0.3));
+  background: black;
 }
 
 .headerPurple {
@@ -40,11 +39,9 @@
     hsla(263, 49%, 68%, 1)
   );
 }
-.header:hover {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(255, 250, 250, 0.3));
-}
+
 .headerLogo {
-  margin-top: 2vh;
+  margin-top: 0;
   padding: none;
   width: 18vw;
   margin-left: 2vw;
@@ -71,13 +68,12 @@
   position: absolute;
   right: 0;
   margin-right: 5vw;
-  border: 1.5px solid #fefefe;
-  border-radius: 5px;
+  outline: none;
+  border: none;
 }
 .signIn:hover {
-  color: hsla(8, 43%, 78%, 1);
-  cursor: pointer;
-  border: 1.5px solid hsla(8, 43%, 78%, 1);
+  text-decoration: underline;
+  text-underline-offset: 0.25em;
 }
 .features,
 .signIn {
@@ -87,9 +83,7 @@
   margin: 0;
   margin-right: 5vw;
   padding: 15px 20px;
-  background: rgba(76, 175, 80, 0);
-  /*border-radius: 8px;*/
-  border: 1.5px solid #fefefe;
+
   color: #fefefe;
   font-size: 20px;
   letter-spacing: 0.8px;
